--- a/fastlane/metadata/ja/release_notes.txt
+++ b/fastlane/metadata/ja/release_notes.txt
@@ -1,6 +1,3 @@
-この更新では信頼性を向上させるための修正が行われました。
-- 「My Store」グラフと「Orders & Notifications」画面のローカライズサポートを改善しました。
-- 作成日が翌日以降の日付の注文が非表示になりました(注文リストの「本日」セクションに表示されなくなりました)。
-- 支払いが行われなかった場合の、支払いセクションの支払い方法の概要が削除されました。
-- 金額がゼロでも、支払いと製品の詳細に税の行が表示されるようになりました。
-- ログアウト時、サポートリクエストで使用した資格情報がリセットされるようになりました。
+- 画面ごとにストアの統計が一致しない場合がありました。統計が信頼に値するものになり、ストアの統計の表示も見やすくなりました。
+- 必要なときに必要なサポートを得られるように、「Store Picker」画面にヘルプボタンを追加しました。
+- アプリケーションログを表示して共有できるようになりました。ログを見ることで直面した問題を追跡し、アプリをスムーズに動かせるようになるとともにバグをなくすことができます。
