--- a/fastlane/metadata/es-ES/release_notes.txt
+++ b/fastlane/metadata/es-ES/release_notes.txt
@@ -1,6 +1,3 @@
-Esta actualización se centra en mejorar la fiabilidad y corregir errores:
-- Soporte de localización mejorado en los gráficos de Mi tienda y en las pantallas Pedidos y Notificaciones.
-- Ahora, la aplicación oculta los pedidos que tienen una fecha de creación posterior a la actual (ya no se muestran en la sección “Hoy” de las listas de pedidos).
-- Hemos eliminado el resumen del método de pago en la sección de pago cuando no se recibe ningún pago.
-- Ahora, la línea de impuestos se muestra en los detalles del producto y del pago aunque el importe a mostrar sea cero.
-- Ahora, al cerrar la sesión, la aplicación restablece la credencial utilizada con las solicitudes de soporte.
+- A veces, las estadísticas de la tienda no son coherentes en las distintas pantallas. Tus estadísticas deben ser fiables, y ahora lo son, porque se ha mejorado la forma en que se muestran.
+- La ayuda más útil es aquella que recibes cuando la necesitas, así que hemos añadido un botón de ayuda a la pantalla del selector de tiendas.
+- Ahora puedes ver y compartir los registros de la aplicación. Con ellos, podemos controlar más fácilmente los posibles errores que te puedas encontrar, de modo que ofrecemos una experiencia de usuario de calidad y sin errores.
