--- a/fastlane/metadata/it/release_notes.txt
+++ b/fastlane/metadata/it/release_notes.txt
@@ -1,6 +1,3 @@
-Questo aggiornamento è relativo alla migliorata affidabilità e alle correzioni:
-- Supporto di localizzazione migliorato sui grafici Il mio negozio e sulla schermata relativa agli ordini e alle notifiche.
-- L'app ora nasconde gli ordini che hanno una data di creazione elencata in futuro. (Non verranno più visualizzati nella sezione "Oggi" di un elenco dell'ordine.)
-- Abbiamo rimosso il riepilogo del metodo di pagamento nella relativa sezione quando non viene ricevuto un pagamento.
-- La riga delle tasse viene mostrata ora nei dettagli dei pagamenti e del prodotto anche quando l'importo mostrato è zero.
-- Quando ti disconnetti, l'app ora ripristina le credenziali usate con le richieste di supporto.
+- A volte le statistiche del negozio erano incoerenti su diverse schermate. Le tue statistiche devono essere affidabili e ora lo sono, con miglioramenti alla modalità di visualizzazione delle statistiche del negozio.
+- L'aiuto migliore è quello disponibile all'occorrenza, quindi abbiamo aggiunto un pulsante di aiuto alla schermata Selezionatore negozio.
+- Ora puoi visualizzare e condividere log applicazione. I log ci aiutano a monitorare eventuali problemi che potresti riscontrare, così possiamo garantire che l'uso dell'app è semplice e privo di bug.
