--- a/fastlane/metadata/ko/release_notes.txt
+++ b/fastlane/metadata/ko/release_notes.txt
@@ -1,6 +1,3 @@
-이 업데이트에서는 신뢰성이 개선되었으며 다음과 같은 수정 사항이 있습니다.
-- 내 스토어 차트와 주문 및 알림 화면의 현지화 지원이 개선되었습니다.
-- 이제는 앱에서 생성된 날짜가 미래에 있는 주문이 숨겨집니다. (더 이상 주문 목록의 “오늘” 섹션 아래에 표시되지 않습니다.)
-- 결제를 받지 못한 경우 결제 섹션에서 결제 수단 요약이 삭제됩니다.
-- 이제는 표시할 금액이 0인 경우에도 결제 및 제품 세부 정보에 세금 행이 표시됩니다.
-- 이제 로그아웃하면 앱에서 지원 요청에 사용한 자격 증명이 초기화됩니다.
+- 스토어 통계가 여러 화면에서 일치하지 않는 경우가 있습니다. 회원님의 통계는 신뢰할 수 있으며 지금은 통계가 표시되는 방식이 개선된 상태입니다.
+- 최적의 도움은 필요할 때 도와주는 것이므로 스토어 선택 도구 화면에 도움말 버튼을 추가했습니다.
+- 이제 애플리케이션 로그를 보고 공유할 수 있습니다. 로그를 통해 문제가 발생했을 때 추적할 수 있으므로 앱 사용이 원활하고 버그가 없는지 확인할 수 있습니다.
