--- a/fastlane/metadata/nl-NL/release_notes.txt
+++ b/fastlane/metadata/nl-NL/release_notes.txt
@@ -1,6 +1,3 @@
-Deze update draait om verbeterde betrouwbaarheid en bugfixes:
-- Verbeterde ondersteuning van lokalisatie voor de grafieken van Mijn winkel en de schermen Bestellingen en Meldingen.
-- De app verbergt nu bestellingen die een toekomstige aanmaakdatum bevatten. (Ze worden niet meer weergegeven in het gedeelte 'Vandaag' van een bestellijst.)
-- We hebben het overzicht van de betaalmethode verwijderd uit het gedeelte Betalingen wanneer er geen betaling is ontvangen.
-- De regel Belastingen wordt nu weergegeven in betalingen en productgegevens, zelfs wanneer het bedrag nul is.
-- Bij het uitloggen stelt de app nu de inloggegevens die voor ondersteuningsverzoeken worden gebruikt opnieuw in.
+- Het kwam wel eens voor dat winkelstatistieken er op verschillende schermen anders uitzagen. Jouw statistieken moeten betrouwbaar zijn, en nu zijn ze dat ook, en de manier waarop winkelstatistieken worden weergegeven is verbeterd.
+- De beste hulp die je je kan bedenken, is hulp die klaarstaat als je hem nodig hebt, dus we hebben een help-knop toegevoegd aan het scherm Kies winkel.
+- Je kunt nu toepassingslogs bekijken en delen. Met deze logs kunnen we problemen opsporen en verhelpen. We kunnen je dus verzekeren dat het gebruik van de app soepel en bug-vrij verloopt.
