--- a/fastlane/metadata/pt-BR/release_notes.txt
+++ b/fastlane/metadata/pt-BR/release_notes.txt
@@ -1,6 +1,3 @@
-Esta atualização traz reparos e segurança aprimorada:
-- Suporte de localização aprimorado nos gráficos da Minha loja e nas telas de Pedidos e Notificações.
-- Agora, o aplicativo oculta pedidos que têm uma data de criação futura. Eles não são mais exibidos abaixo da seção “Hoje” das listas de pedido.
-- Removemos o resumo da forma de pagamento na seção de pagamentos quando nenhum valor é recebido.
-- Agora, a linha de taxas é exibida nos detalhes de produto e pagamentos mesmo se o valor for zero.
-- Agora, o aplicativo redefine a credencial usada nas solicitações de suporte durante o logout.
+- Às vezes, as estatísticas da loja apareciam inconsistentes em telas diferentes. A estatísticas de sua loja devem ser confiáveis e, a partir de agora, elas são, pois contêm melhorias na exibição delas.
+- A melhor ajuda é aquela que chega quando precisamos. Sendo assim, incluímos um botão de ajuda na tela Seletor de lojas.
+- A partir de agora, você poderá visualizar e compartilhar logs de aplicativos. Os logs nos auxiliam no acompanhamento de possíveis problemas, para que possamos garantir que a utilização do aplicativo ocorre sem dificuldades e bugs.
