--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,6 +1,3 @@
-В этом обновлении основное внимание было уделено повышению надежности и исправлению ошибок.
-— Добавлен перевод таблиц в разделе «Мой магазин» и страниц в разделе «Заказы и уведомления».
-— В приложении скрываются заказы, дата формирования которых еще не наступила. (Они больше не отображаются в разделе «Сегодня» в списке заказов.)
-— В разделе платежей больше не отображается список способов оплаты, если нет полученных платежей.
-— В сведениях о продуктах и платежах отображается строчка налогов, даже если сумма налога равна 0.
-— При выходе приложение сбрасывает учетные данные, используемые для обращения в службу поддержки.
+— Раньше статистика магазина в разных разделах могла не совпадать. Благодаря изменению параметров отображения теперь на сайте представлены правильные статистические данные, которым можно доверять.
+— Лучшая помощь та, которая приходит вовремя, поэтому мы добавили кнопку справки на экран выбора магазина.
+— Теперь можно просматривать и отправлять журналы приложения. Журналы помогают нам находить причины проблем, с которыми сталкиваются пользователи. Это гарантирует, что в приложении нет ошибок и им удобно пользоваться.
