--- a/WooCommerce/Resources/zh-Hant.lproj/Localizable.strings
+++ b/WooCommerce/Resources/zh-Hant.lproj/Localizable.strings
@@ -423,7 +423,7 @@
 "Log in with your WordPress.com account email address to manage your WooCommerce stores." = "使用 WordPress.com 帳號電子郵件地址登入，即可管理 WooCommerce 商店。";
 
 /* Log out button title */
-"Log out account" = "登出帳號";
+"Log Out" = "登出帳號";
 
 /* Title of a button. */
 "Lost your password?" = "忘記密碼？";
