--- a/WooCommerce/Resources/sv.lproj/Localizable.strings
+++ b/WooCommerce/Resources/sv.lproj/Localizable.strings
@@ -423,7 +423,7 @@
 "Log in with your WordPress.com account email address to manage your WooCommerce stores." = "Logga in med e-postadressen för ditt WordPress.com-konto för att hantera dina WooCommerce-butiker.";
 
 /* Log out button title */
-"Log out account" = "Logga ut konto";
+"Log Out" = "Logga ut konto";
 
 /* Title of a button. */
 "Lost your password?" = "Glömt ditt lösenord?";
