Update copy of Clear Log Button from Clear old activity logs to Reset Activity Log

--- a/WooCommerce/Resources/ar.lproj/Localizable.strings
+++ b/WooCommerce/Resources/ar.lproj/Localizable.strings
@@ -135,7 +135,7 @@
 "Certificate error" = "خطأ في الشهادة";
 
 /* Deletes all activity logs except for the marked 'Current'. */
-"Clear old activity logs" = "مسح سجلات النشاط القديمة";
+"Reset Activity Log" = "مسح سجلات النشاط القديمة";
 
 /* Settings > Privacy Settings > collect info section. Label for the `Collect Information` toggle. */
 "Collect Information" = "جمع المعلومات";
