Update metadata translations for 1.3

--- a/fastlane/metadata/es-ES/release_notes.txt
+++ b/fastlane/metadata/es-ES/release_notes.txt
@@ -1,3 +1,3 @@
-- A veces, las estadísticas de la tienda no son coherentes en las distintas pantallas. Tus estadísticas deben ser fiables, y ahora lo son, porque se ha mejorado la forma en que se muestran.
-- La ayuda más útil es aquella que recibes cuando la necesitas, así que hemos añadido un botón de ayuda a la pantalla del selector de tiendas.
-- Ahora puedes ver y compartir los registros de la aplicación. Con ellos, podemos controlar más fácilmente los posibles errores que te puedas encontrar, de modo que ofrecemos una experiencia de usuario de calidad y sin errores.
+- ¿Gestionas más de una tienda? Puedes cambiar de sitio sin tener que salir y volver a acceder: accede a Configuración y toca Cambiar tienda. El nombre de la tienda activa se muestra en la pestaña “Mi tienda”.
+- Cuando se produce un error al añadir una nota o realizar un pedido, ahora en el cuadro de mensaje se muestra la opción “Reintentar” para que puedas intentarlo de nuevo.
+- Los pagos que recibes no son solo números redondos, así que ahora los pedidos pueden tener cantidades en decimales.
