--- a/fastlane/metadata/ja/release_notes.txt
+++ b/fastlane/metadata/ja/release_notes.txt
@@ -1,3 +1,3 @@
-- 画面ごとにストアの統計が一致しない場合がありました。統計が信頼に値するものになり、ストアの統計の表示も見やすくなりました。
-- 必要なときに必要なサポートを得られるように、「Store Picker」画面にヘルプボタンを追加しました。
-- アプリケーションログを表示して共有できるようになりました。ログを見ることで直面した問題を追跡し、アプリをスムーズに動かせるようになるとともにバグをなくすことができます。
+- 複数のストアを管理しますか ?サイト切り替えにログインやログアウトは不要です。「設定」に移動して「ストアを切り替え」をタップします。有効なストアの名前が「自分のストア」タブに表示されます。
+- メモの追加や注文の処理が失敗すると、メッセージボックスに「再試行」オプションが表示され、再実行できます。
+- 支払いの概数を受けるだけでなく、今後は注文が10進数で表示されます。
