--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,3 +1,3 @@
-— Раньше статистика магазина в разных разделах могла не совпадать. Благодаря изменению параметров отображения теперь на сайте представлены правильные статистические данные, которым можно доверять.
-— Лучшая помощь та, которая приходит вовремя, поэтому мы добавили кнопку справки на экран выбора магазина.
-— Теперь можно просматривать и отправлять журналы приложения. Журналы помогают нам находить причины проблем, с которыми сталкиваются пользователи. Это гарантирует, что в приложении нет ошибок и им удобно пользоваться.
+— Управляете несколькими магазинами? Теперь можно переключаться между сайтами без ввода учетных данных. Перейдите в "Настройки" и нажмите "Переключиться между магазинами". Название текущего магазина отображается на вкладке "Мой магазин".
+— В окно, которое отображается при сбое во время добавления примечания или выполнения заказа, добавлена кнопка "Повторить попытку", чтобы можно было выполнить действие еще раз.
+— В цены добавлены знаки после запятой для использования дробных чисел.
