--- a/fastlane/metadata/de-DE/release_notes.txt
+++ b/fastlane/metadata/de-DE/release_notes.txt
@@ -1,3 +1,3 @@
-- Die Shop-Statistiken waren auf verschiedenen Bildschirmen manchmal nicht einheitlich. Ihre Statistiken sollten vertrauenswürdig sein, und jetzt sind sie es auch – dank der Verbesserungen an der Anzeige der Shop-Statistiken.
-- Hilfe ist dann am besten, wenn sie direkt zur Hand ist. Darum haben wir auf dem Store Picker-Bildschirm einen Hilfe-Button hinzugefügt.
-- Du kannst dir Anwendungsprotokolle jetzt anzeigen lassen und sie teilen. Die Protokolle helfen uns dabei, ggf. auftretende Probleme nachzuverfolgen. So können wir dafür sorgen, dass die Nutzung der App einwandfrei abläuft.
+- Mehr als einen Shop verwalten? Du kannst zwischen Websites wechseln, ohne dich an- und abzumelden: Navigiere zu den Einstellungen und tippe auf den Button zum Wechseln des Shops. Der Name des aktiven Shops wird auf dem Tab „Mein Shop“ angezeigt.
+- Wenn ein Hinweis nicht hinzugefügt oder eine Bestellung nicht erfüllt werden kann, wird im Nachrichtenfeld jetzt die Option zum erneuten Versuchen angezeigt, damit du es noch einmal probieren kannst.
+- Du nimmst nicht nur Zahlungen mit runden Zahlen an, sodass Bestellungen jetzt Dezimalmengen enthalten können.
