--- a/fastlane/metadata/en-US/release_notes.txt
+++ b/fastlane/metadata/en-US/release_notes.txt
@@ -1,3 +1,3 @@
-- Sometimes store stats were inconsistent across different screens. Your stats should be trustworthy, and now they are, with improvements to how store stats they’re displayed.
-- The best help is help that’s there when you need it, so we added a help button to the Store Picker screen.
-- You can now view and share application logs. The logs help us track down any issues you might run into, so we can ensure that using the app is smooth and bug-free.
+- Manage more than one store? You can switch sites without logging in and out: head to Settings and tap on Switch Store. The name of the active store displays on the “My Store” tab.
+- When adding a note or fulfilling an order fails, the message box now shows a “Retry” option so you can give it another go.
+- You don’t only take payments in round numbers, so orders can now have decimal quantities.
