--- a/fastlane/metadata/it/release_notes.txt
+++ b/fastlane/metadata/it/release_notes.txt
@@ -1,3 +1,3 @@
-- A volte le statistiche del negozio erano incoerenti su diverse schermate. Le tue statistiche devono essere affidabili e ora lo sono, con miglioramenti alla modalità di visualizzazione delle statistiche del negozio.
-- L'aiuto migliore è quello disponibile all'occorrenza, quindi abbiamo aggiunto un pulsante di aiuto alla schermata Selezionatore negozio.
-- Ora puoi visualizzare e condividere log applicazione. I log ci aiutano a monitorare eventuali problemi che potresti riscontrare, così possiamo garantire che l'uso dell'app è semplice e privo di bug.
+- Gestisci più di un negozio? Puoi passare da un sito all’altro senza dover accedere e uscire: vai in Impostazioni e tocca Cambia negozio. Il nome del negozio attivo è visualizzato nella scheda “Il mio negozio”.
+- Quando aggiungi una nota o l’evasione di un ordine non riesce, ora la casella del messaggio mostra l’opzione “Riprova” per permettere un altro tentativo.
+- Non accetti solo pagamenti per cifre intere, quindi ora gli ordini possono avere quantità decimali.
