--- a/fastlane/metadata/ko/release_notes.txt
+++ b/fastlane/metadata/ko/release_notes.txt
@@ -1,3 +1,3 @@
-- 스토어 통계가 여러 화면에서 일치하지 않는 경우가 있습니다. 회원님의 통계는 신뢰할 수 있으며 지금은 통계가 표시되는 방식이 개선된 상태입니다.
-- 최적의 도움은 필요할 때 도와주는 것이므로 스토어 선택 도구 화면에 도움말 버튼을 추가했습니다.
-- 이제 애플리케이션 로그를 보고 공유할 수 있습니다. 로그를 통해 문제가 발생했을 때 추적할 수 있으므로 앱 사용이 원활하고 버그가 없는지 확인할 수 있습니다.
+- 스토어를 하나 이상 관리합니까? 로그인 및 로그아웃하지 않고 사이트를 전환할 수 있습니다. 설정으로 가서 스토어 전환을 탭하세요. 활성 스토어의 이름이 "내 스토어" 탭에 표시됩니다.
+- 메모를 추가하거나 주문을 이행하지 못하면 메시지 상자에 "다시 시도"옵션이 표시되므로 다시 시도할 수 있습니다.
+- 어림수로 결제하는 것뿐만 아니라 이제 주문 수량에 소수점을 사용할 수 있습니다.
