--- a/fastlane/metadata/pt-BR/release_notes.txt
+++ b/fastlane/metadata/pt-BR/release_notes.txt
@@ -1,3 +1,3 @@
-- Às vezes, as estatísticas da loja apareciam inconsistentes em telas diferentes. A estatísticas de sua loja devem ser confiáveis e, a partir de agora, elas são, pois contêm melhorias na exibição delas.
-- A melhor ajuda é aquela que chega quando precisamos. Sendo assim, incluímos um botão de ajuda na tela Seletor de lojas.
-- A partir de agora, você poderá visualizar e compartilhar logs de aplicativos. Os logs nos auxiliam no acompanhamento de possíveis problemas, para que possamos garantir que a utilização do aplicativo ocorre sem dificuldades e bugs.
+- Você gerencia mais de uma loja? É possível trocar de site sem fazer login e logout: acesse as Configurações e toque em Trocar de loja. O nome da loja ativa será exibido na guia “Minha loja”.
+- Quando houver falha ao adicionar uma observação ou preencher um pedido, a caixa de mensagens agora mostrará uma opção "Tentar novamente", para que você possa fazer uma nova tentativa.
+- Você não aceita apenas pagamentos em valores inteiros, portanto, agora poderá adicionar casas decimais a eles.
