--- a/fastlane/metadata/sv/release_notes.txt
+++ b/fastlane/metadata/sv/release_notes.txt
@@ -1,3 +1,3 @@
-– ibland var butiksstatistik inkosekvent mellan olika skärmar. Du ska kunna lita på din statistik och nu kan du det med förbättringar i hur butiksstatistik visas.
-– den bästa hjälpen är den som finns där när du behöver den så vi har lagt till en hjälpknapp i Butiksväljaren-skärmen.
-– du kan nu visa och dela programloggar. Loggarna hjälper oss att spåra problem som du kan stöta på så att vi kan se till att appen är smidig och felfri att använda.
+- Hanterar du fler än en butik? Du kan byta webbplatser utan att logga in och ut: Gå till Inställningar och tryck på Byt butik. Namnet på den aktiva butiken visas på fliken ”Min butik”.
+- När det inte går att lägga till en anteckning eller göra en beställning, visar meddelandeboxen nu alternativet ”Försök igen” så att du kan testa en gång till.
+- Du tar inte bara betalt i heltal, så beställningar kan nu ha decimalmängder.
