--- a/fastlane/metadata/tr/release_notes.txt
+++ b/fastlane/metadata/tr/release_notes.txt
@@ -1,3 +1,3 @@
-- Bazı durumlarda mağaza istatistikleri farklı ekranlarda tutarsızlık gösteriyordu. İstatistikleriniz her zaman güvenilir olmalıdır. Mağaza istatistiklerinin nasıl görüntülenmesi gerektiğine ilişkin yapılan iyileştirmelerle birlikte artık bu güvenilirlik sağlandı.
-- En iyi yardım, ihtiyaç duyduğunuzda ulaşabileceğiniz yardımdır. Bu nedenle Mağaza Seçimi ekranına sizin için bir yardım düğmesi ekledik.
-- Artık uygulama günlüklerini görüntüleyebilir ve paylaşabilirsiniz. Günlükler, karşılaşabileceğiniz sorunları tespit etmemize yardımcı olur. Böylece uygulamanın sorunsuz ve hatasız kullanıldığından emin olabiliriz.
+- Birden fazla mağaza mı yönetiyorsunuz? Oturum açıp kapatmadan siteler arasında geçiş yapabilirsiniz. Ayarlar'a gidin ve Mağaza Değiştir'e dokunun. Etkin olan mağazanın arı “Mağazam” sekmesinde görüntülenir.
+- Bir not ekleme ya da siparişi yerine getirme başarısız olduğunda, tekrar deneyebilmeniz için mesaj kutusunda artık "Tekrar dene" seçeneği görüntüleniyor.
+- Siparişlerin artık ondalık miktarlarda olabilmesi için sadece yuvarlanmış sayılarda ödeme almakla kalmayacaksınız.
