--- a/fastlane/metadata/zh-Hans/release_notes.txt
+++ b/fastlane/metadata/zh-Hans/release_notes.txt
@@ -1,3 +1,3 @@
-- 之前，不同屏幕上显示的存储数据有时存在不一致的情况。您的统计信息应该有足够的可信度，随着存储统计信息显示方式的改进，现已经实现该目标。
-- 最好的帮助是能在您需要时随时为您提供帮助。所以我们在“商店选择器”屏幕上添加了一个“帮助”按钮。
-- 现在，您可以查看和共享应用程序日志。这些日志可以帮助我们跟踪您可能遇到的任何问题，以便我们可以确保提供流畅且无误的应用程序使用体验。
+- 管理多家商店？您可以在不登录和退出的情况下切换站点：前往“设置”，轻点“切换商店”。活动商店的名称显示在“我的商店”选项卡上。
+- 现在，当添加注释或履行订单失败时，消息框会显示“重试”选项，以便您可以再次尝试。
+- 您并非只接受整数支付，因此现在订单金额可以包含小数。
