--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,5 +1,6 @@
 1.4
 -----
+- bugfix: fix a crash happening on log out
 - new feature: Add shipment tracking to Order Details screen
 - improvement: The store switcher now allows you to go back to the previous screen without logging you out
 - improvement: Custom order status labels are now supported! Instead of just displaying the order status slug and capitalizing the slug, the custom order status label will now be fetched from the server and properly displayed.
