--- a/WooCommerce/Resources/ko.lproj/Localizable.strings
+++ b/WooCommerce/Resources/ko.lproj/Localizable.strings
@@ -135,7 +135,7 @@
 "Certificate error" = "인증서 오류";
 
 /* Deletes all activity logs except for the marked 'Current'. */
-"Reset Activity Log" = "이전 활동 기록 지우기";
+"Clear old activity logs" = "이전 활동 기록 지우기";
 
 /* Settings > Privacy Settings > collect info section. Label for the `Collect Information` toggle. */
 "Collect Information" = "정보 수집";
@@ -232,9 +232,6 @@
 
 /* WordPress.com (unmapped!) error */
 "Dotcom Error: [(code)] (theMessage)" = "닷컴 오류: [(code)] (theMessage)";
-
-/* WordPress.com error thrown when the the request REST API url is invalid. */
-"Dotcom Invalid REST Route" = "Dotcom Invalid REST Route";
 
 /* WordPress.com Missing Token */
 "Dotcom Missing Token" = "닷컴 토큰 누락";
@@ -426,7 +423,7 @@
 "Log in with your WordPress.com account email address to manage your WooCommerce stores." = "WooCommerce 스토어를 관리하려면 워드프레스닷컴 계정 이메일 주소로 로그인합니다.";
 
 /* Log out button title */
-"Log Out" = "로그아웃 계정";
+"Log out account" = "로그아웃 계정";
 
 /* Title of a button. */
 "Lost your password?" = "비밀번호 분실?";
@@ -479,8 +476,7 @@
 /* My Tickets title */
 "My Tickets" = "내 티켓";
 
-/* My Store Notice Title for loading error
-   Title of the bottom tab item that presents the user's store dashboard, and default title for the store dashboard */
+/* Dashboard navigation title */
 "My store" = "내 스토어";
 
 /* Name text field placeholder */
@@ -639,6 +635,9 @@
 /* Message to ask the user to check their email and look for a WordPress.com email. */
 "Please open your email app and look for an email from WordPress.com." = "이메일 앱을 열고 워드프레스닷컴에서 보낸 이메일을 찾으세요.";
 
+/* My Store > Settings > Primary Store information section */
+"Primary Store" = "기본 스토어";
+
 /* Opens the Privacy Policy web page */
 "Privacy Policy" = "개인정보 취급방침";
 
@@ -719,9 +718,6 @@
 
 /* Search Orders */
 "Search orders" = "주문 검색";
-
-/* My Store > Settings > Selected Store information section. This is the heading listed above the information row that displays the store website and their username. */
-"Selected Store" = "Selected Store";
 
 /* Title of a button. The text should be uppercase.  Clicking requests a hyperlink be emailed ot the user. */
 "Send Link" = "링크 전송";
@@ -831,9 +827,6 @@
 
 /* Subtotal label for payment view */
 "Subtotal" = "소계";
-
-/* This action allows the user to change stores without logging out and logging back in again. */
-"Switch Store" = "Switch Store";
 
 /* Labels an order note to let user know it's a system status message */
 "System status" = "시스템 상태";
@@ -968,17 +961,8 @@
 /* Shown when a user logs in with Google but it subsequently fails to work as login to WordPress.com */
 "Unable To Connect" = "연결할 수 없음";
 
-/* Content of error presented when Add Note Action Failed. It reads: Unable to add note to order #{order number} */
-"Unable to add note to order #(viewModel.order.orderID)" = "Unable to add note to order #(viewModel.order.orderID)";
-
 /* Displayed during the Login flow, whenever the user has no woo stores associated. */
 "Unable to find WooCommerce stores connected to this account" = "이 계정에 연결된 우커머스 스토어를 찾을 수 없음";
-
-/* Content of error presented when Fullfill Order Action Failed. It reads: Unable to fulfill order #{order number} */
-"Unable to fulfill order #(orderID)" = "Unable to fulfill order #(orderID)";
-
-/* Load Action Failed */
-"Unable to load content" = "Unable to load content";
 
 /* Review error notice message. It reads: Unable to mark review as {attempted status} */
 "Unable to mark review as %@" = "Unable to mark review as %@";
